@@ -1,9 +1,13 @@
 package com.auth.ums.JwtSecurity;
 
+import com.auth.ums.Service.AuthService.IAuthService;
+import com.auth.ums.Utility.JsonUtils;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -17,7 +21,7 @@ import java.util.stream.Collectors;
 @Component
 public class JwtAuthorizationFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
-
+    private static final Logger log = LoggerFactory.getLogger(JwtAuthorizationFilter.class);
     public JwtAuthorizationFilter(JwtUtil jwtUtil) {
         this.jwtUtil = jwtUtil;
     }
@@ -44,6 +48,8 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
 
         String header = request.getHeader("Authorization");
 
+        log.info("Authorization : {}", header);
+
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
 
@@ -51,17 +57,24 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
                 String username = jwtUtil.getUsername(token);
                 List<String> roles = jwtUtil.getRoles(token);
 
+                //List<SimpleGrantedAuthority> authorities = roles.stream()
+                    //    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                      //  .collect(Collectors.toList());
                 List<SimpleGrantedAuthority> authorities = roles.stream()
                         .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                        .collect(Collectors.toList());
+                        .toList();
+
 
                 UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(username, null, authorities);
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
+                log.info("SecurityContextHolder : {}", authentication);
+                log.info("Authorities: {}", authentication.getAuthorities());
+
             }
         }
-
+        log.info("doFilterInternal : {}", response);
         filterChain.doFilter(request, response);
     }
 }
